--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
       background-color: #f0f0f0;
       border-radius: 5px;
     }
+    #generate {
+      line-height: 1.6; /* 원하는 수치로 조정 */
+    }
+   
     #question-form .question-block p {
       margin: 5px 0;
     }
