--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <!-- 반응형 화면을 위한 meta 태그 -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>영어 독해 문제 생성기</title>
+  <title>🔱영어 독해 문제 생성 마법사🔱</title>
   <!-- 아이콘 (Font Awesome) -->
   <link 
     rel="stylesheet"
@@ -175,7 +175,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>영어 독해 문제 생성기</h1>
+    <h1>🔱영어 독해 문제 생성 마법사</h1>
     <div class="tabs">
       <button onclick="showSection('upload')">
         <i class="fas fa-upload"></i> 지문 업로드
