--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>🔱영어 독해 문제 생성 마법사</h1>
+    <h1>✨영어 독해 문제 생성 마법사 ✨</h1>
     <div class="tabs">
       <button onclick="showSection('upload')">
         <i class="fas fa-upload"></i> 지문 업로드
