--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         <label><input type="checkbox" class="problem-type" value="어법" /> 어법</label>
       </div>
 
-      <div style="margin-bottom: 10px;">
+      <div style="margin-bottom: 10, margin-top: 10px;">
         <h3>✅ 문항 수 선택</h3>
         <label>
           👉🏻 전체 문항 수:
