--- a/index.html
+++ b/index.html
@@ -360,6 +360,7 @@
     }
 
     // *** 활동 생성 ***
+    let activityData = null; // 생성된 활동 JSON
     async function generateActivity() {
       const passage = document.getElementById("passage").value.trim();
       if (!passage) {
@@ -394,51 +395,94 @@
         if (!result || !Array.isArray(result.activities)) {
           throw new Error("올바르지 않은 활동 데이터");
         }
+        activityData = result; // 저장해두고 정답 보기 기능에서 사용
 
         const outputDiv = document.getElementById("activityOutput");
         let html = "<h3>활동 결과</h3>";
-        result.activities.forEach(act => {
+        
+        result.activities.forEach((act, idx) => {
+          // 활동 구분 공백
+          if (idx > 0) {
+            html += `<div style="margin: 1rem 0;"></div>`;
+          }
           html += `<h4>${act.type}</h4>`;
+
+          // 단어 및 주요 표현 익히기
           if (act.type === "단어 및 주요 표현 익히기" && act.items) {
-            act.items.forEach(item => {
+            // 1), 2), 3) numbering
+            act.items.forEach((item, i) => {
+              // item => { vocab, meaning, note, possibly answer? }
+              // 원하는 형식: "1) run: 달리다  __________________"
               html += `
                 <p>
-                  <strong>${item.vocab}</strong> : ${item.meaning}
-                  <br />필기공간: <input type="text" style="width:200px;" />
+                  ${i+1}) <strong>${item.vocab}</strong>: ${item.meaning}
+                  &nbsp; <u style="display:inline-block; min-width: 150px;">&nbsp;</u>
                 </p>
               `;
             });
-          } else if (act.type === "영어 문장 해석하기" && act.sentences) {
-            act.sentences.forEach((s, idx) => {
+          }
+          // 영어 문장 해석하기
+          else if (act.type === "영어 문장 해석하기" && act.sentences) {
+            // 1), 2), 3)...
+            act.sentences.forEach((s, i) => {
+              // { original, blank, answer? }
+              // 빈칸을 문장 길이 x 1.2 => 일단 approximate
+              const len = Math.round(s.original.length * 1.2);
+              let line = "";
+              for (let k=0; k<len; k++) line += "_";
               html += `
                 <p>
-                  문장 ${idx+1}: ${s.original}
-                  <br />해석: <input type="text" style="width:250px;" value="${s.blank||""}" />
+                  ${i+1}) ${s.original}
+                  <br />해석: <u style="display:inline-block;">${line}</u>
                 </p>
               `;
             });
-          } else if (act.type === "우리말 영어로 번역하기" && act.list) {
-            act.list.forEach((row, idx) => {
+          }
+          // 우리말 영어로 번역하기
+          else if (act.type === "우리말 영어로 번역하기" && act.list) {
+            act.list.forEach((row, i) => {
+              // row => { korean, blank, answer? }
+              const len = Math.round(row.korean.length * 1.2);
+              let line = "";
+              for (let k=0; k<len; k++) line += "_";
               html += `
                 <p>
-                  [${idx+1}] 한국어: ${row.korean}
-                  <br />영어 작문: <input type="text" style="width:300px;" />
+                  ${i+1}) ${row.korean}
+                  <br />영어: <u style="display:inline-block;">${line}</u>
                 </p>
               `;
             });
-          } else if (act.type === "문법 변형 활동" && act.examples) {
+          }
+          // 문법 변형 활동
+          else if (act.type === "문법 변형 활동" && act.examples) {
             act.examples.forEach((ex, i) => {
+              // ex => { instruction, original, answer? }
               html += `
                 <p>
-                  예제 ${i+1}: ${ex.original}
-                  <br />변형(연습): <input type="text" style="width:300px;" placeholder="${ex.transform||''}" />
+                  ${i+1}) [${ex.instruction}]<br />
+                  원문: ${ex.original}
+                  <br />변형: <u style="display:inline-block; min-width:180px;">&nbsp;</u>
                 </p>
               `;
             });
-          } else {
-            html += `<p>내용 미정</p>`;
+          }
+          else {
+            html += `<p>해당 활동에 대한 데이터가 없습니다.</p>`;
           }
         });
+
+        // 하단 버튼들
+        html += `
+          <div style="margin-top:20px;">
+            <button onclick="printPage()">
+              <i class="fas fa-print"></i> 웹 페이지 인쇄
+            </button>
+            <button onclick="showActivityAnswers()">
+              <i class="fas fa-eye"></i> 정답 보기
+            </button>
+          </div>
+        `;
+
         outputDiv.innerHTML = html;
 
       } catch (err) {
@@ -447,12 +491,106 @@
       }
     }
 
+    // 활동 정답 보기
+    function showActivityAnswers() {
+      if (!activityData) {
+        alert("활동 데이터가 없습니다.");
+        return;
+      }
+      // activityData.activities => each item has optional "answer"
+      // 본문에는 정답 미리 표시 X, 클릭 시 표시
+      // => we re-render with answer if it exists
+      const outputDiv = document.getElementById("activityOutput");
+      let html = "<h3>활동 결과 (정답 보기)</h3>";
+      
+      activityData.activities.forEach((act, idx) => {
+        if (idx > 0) {
+          html += `<div style="margin: 1rem 0;"></div>`;
+        }
+        html += `<h4>${act.type}</h4>`;
+
+        if (act.type === "단어 및 주요 표현 익히기" && act.items) {
+          act.items.forEach((item, i) => {
+            const len = item.meaning.length * 1.2;
+            html += `
+              <p>
+                ${i+1}) <strong>${item.vocab}</strong>: ${item.meaning}
+                &nbsp; <u style="display:inline-block; min-width:150px;">&nbsp;</u>
+            `;
+            if (item.answer) {
+              html += `<br />[정답] ${item.answer}`;
+            }
+            html += `</p>`;
+          });
+        }
+        else if (act.type === "영어 문장 해석하기" && act.sentences) {
+          act.sentences.forEach((s, i) => {
+            const len = Math.round(s.original.length * 1.2);
+            let line = "";
+            for (let k=0; k<len; k++) line += "_";
+            html += `
+              <p>
+                ${i+1}) ${s.original}
+                <br />해석: <u style="display:inline-block;">${line}</u>
+            `;
+            if (s.answer) {
+              html += `<br />[정답] ${s.answer}`;
+            }
+            html += `</p>`;
+          });
+        }
+        else if (act.type === "우리말 영어로 번역하기" && act.list) {
+          act.list.forEach((row, i) => {
+            const len = Math.round(row.korean.length * 1.2);
+            let line = "";
+            for (let k=0; k<len; k++) line += "_";
+            html += `
+              <p>
+                ${i+1}) ${row.korean}
+                <br />영어: <u style="display:inline-block;">${line}</u>
+            `;
+            if (row.answer) {
+              html += `<br />[정답] ${row.answer}`;
+            }
+            html += `</p>`;
+          });
+        }
+        else if (act.type === "문법 변형 활동" && act.examples) {
+          act.examples.forEach((ex, i) => {
+            html += `
+              <p>
+                ${i+1}) [${ex.instruction}]<br />
+                원문: ${ex.original}
+                <br />변형: <u style="display:inline-block; min-width:180px;">&nbsp;</u>
+            `;
+            if (ex.answer) {
+              html += `<br />[정답] ${ex.answer}`;
+            }
+            html += `</p>`;
+          });
+        }
+        else {
+          html += `<p>해당 활동에 대한 데이터가 없습니다.</p>`;
+        }
+      });
+
+      html += `
+        <div style="margin-top:20px;">
+          <button onclick="printPage()">
+            <i class="fas fa-print"></i> 웹 페이지 인쇄
+          </button>
+        </div>
+      `;
+      outputDiv.innerHTML = html;
+    }
+
     window.handleImageUpload = handleImageUpload;
     window.generateQuestion = generateQuestion;
     window.showAnswersAndExplanations = showAnswersAndExplanations;
     window.showKoreanTranslation = showKoreanTranslation;
     window.printPage = printPage;
     window.generateActivity = generateActivity;
+    window.showActivityAnswers = showActivityAnswers;
   </script>
 </head>
 <body>
